	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
	* Added missing WARP device type.
	* Fixed shader compilation to allow null entry points.
	* Fixed ShaderSignature Get*Signature methods.
	* Added overloads to EffectVectorVariable.Set to take color inputs.
	
Direct3D 11
	* Dropped stream size checks in texture ToStream functions.
	* Added a constructor to InputLayout to take shader bytecode.
	* Added Texture2D.ComputeNormalMap.
	* Added ShaderResourceView.FromFile, ShaderResourceView.FromMemory and ShaderResourceView.FromStream.
	* Added Resource.LoadTextureFromTexture and Resource.FilterTexture.
	* Added Resource.AsSurface to retrieve a DXGI Surface from a resource.
	* Fixed shader compilation to allow null entry points.
	* Added new overloads for CreateDeviceWithSwapChain that better prevent argument errors. Old overloads have been deprecated.
	* Fixed the Device.GetSupportedFeatureLevel functions.
	* Fixed ShaderSignature Get*Signature methods.
	* Added overloads to EffectVectorVariable.Set to take color inputs.
	* Added stream-output support to geometry shaders.
	* Documented a large portion of the D3D11 types.
	* Added missing TextureCube members to ShaderResourceViewDescription.
	* Cleaned up the DirectCompute interfaces.
	* Added creation methods for the FastFourierTransform type.
	
Windows
	* Added several overloads to MessagePump.Run to allow access to corresponding Application.Run overloads.
	
DXGI
	* Added missing member to Usage enumeration.

DirectWrite
	* Added a bunch of missing functionality.

RawInput
	* Fixed the data type of the mouse wheel delta.
	
XAPO
	* Finished implementing the subsystem.
	
XACT3
	* Added the subsystem.
	
XAudio2
	* Fixed an issue in WaveStream that caused popping noises when loading data from an existing stream.
	* Changed OnVoiceProcessingPassStart to only perform an allocation if an event handler is hooked up.
	* Hooked up the effect chain portions to XAPO.